@@ -3,16 +3,13 @@ package com.unipart.unipart_backend.exception;
 import com.unipart.unipart_backend.dto.response.ApiResponse;
 import jakarta.validation.ConstraintViolation;
 import lombok.extern.slf4j.Slf4j;
-import org.hibernate.mapping.Constraint;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.ErrorResponse;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import java.nio.file.AccessDeniedException;
 import java.text.ParseException;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 
@@ -26,6 +23,7 @@ public class GlobalHandleException {
         ApiResponse apiResponse = new ApiResponse();
         apiResponse.setCode(ErrorCode.UNCATEGORIZED_EXCEPTION.getCode());
         apiResponse.setMessage(ErrorCode.UNCATEGORIZED_EXCEPTION.getMessage());
+        log.error("Lỗi chưa xác định (Uncategorized Exception): ", exception);
         return ResponseEntity.badRequest().body(apiResponse);
     }
     @ExceptionHandler(value = AppException.class)
@@ -46,7 +44,7 @@ public class GlobalHandleException {
     try{
         errorCode = ErrorCode.valueOf(enumKey);
         var constraintViolation = exception.getBindingResult()
-                .getAllErrors().getFirst().unwrap(ConstraintViolation.class);
+                .getAllErrors().get(0).unwrap(ConstraintViolation.class);
 
         attributes = constraintViolation.getConstraintDescriptor().getAttributes();
         log.info(attributes.toString());
